# iddata

./: CHANGELOG.md  CLAUDE.md  README.md  nhsn-adjusted.csv  pyproject.toml
.github/workflows/: snapshot-nhsn-data.yml  snapshot-nssp-data.yml
requirements/: requirements-dev.txt  requirements.txt
src/iddata/: __init__.py  constants.py  enums.py  loader.py  s3.py  utils.py
src/iddata/ancillary/: __init__.py  base.py  population.py
src/iddata/sources/: __init__.py  base.py  flusurvnet.py  ilinet.py  nhsn.py  nssp.py
tests/iddata/unit/: test_load_data.py  test_sources.py
