[project]
name = "iddata"
description = "Python module for accessing infectious disease data"
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

dependencies = [
    "epidatpy @ git+https://github.com/cmu-delphi/epidatpy.git",
    "numpy",
    "pandas",
    "pymmwr",
    "rich",
    "s3fs",
    "toml"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "ruff",
    "types-toml",
]

[project.urls]
Repository = "https://github.com/reichlab/iddata.git"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
testpaths = [
    "tests",
]

[tools.setuptools]
packages = ["iddata"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.dynamic]
version = {attr = "iddata.__version__"}
